[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/birds/0/beakbottom.png" type="Texture" id=1]
[ext_resource path="res://Bird.gd" type="Script" id=2]
[ext_resource path="res://Trail.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/fly.mp3" type="AudioStream" id=4]
[ext_resource path="res://FlyingAudio.gd" type="Script" id=5]
[ext_resource path="res://assets/birds/0/beaktop.png" type="Texture" id=6]
[ext_resource path="res://assets/birds/0/body.png" type="Texture" id=7]
[ext_resource path="res://assets/birds/0/wing.png" type="Texture" id=8]
[ext_resource path="res://Beak.gd" type="Script" id=9]
[ext_resource path="res://assets/score.mp3" type="AudioStream" id=10]
[ext_resource path="res://assets/death.mp3" type="AudioStream" id=11]
[ext_resource path="res://DeathParticles.tscn" type="PackedScene" id=12]
[ext_resource path="res://Dead.tres" type="Material" id=13]
[ext_resource path="res://assets/birds/0/eye.png" type="Texture" id=14]

[node name="Bird" type="Area2D"]
scale = Vector2( 0.25, 0.25 )
z_index = 1
script = ExtResource( 2 )
Trail = ExtResource( 3 )
DeathParticles = ExtResource( 12 )
DeadMaterial = ExtResource( 13 )

[node name="Beak" type="Node2D" parent="."]
script = ExtResource( 9 )

[node name="Bottom" type="Sprite" parent="Beak"]
use_parent_material = true
texture = ExtResource( 1 )

[node name="Top" type="Sprite" parent="Beak"]
use_parent_material = true
texture = ExtResource( 6 )

[node name="Tween" type="Tween" parent="Beak"]

[node name="End" type="Node2D" parent="Beak"]
position = Vector2( 118.345, 3.43631 )

[node name="Body" type="Sprite" parent="."]
use_parent_material = true
texture = ExtResource( 7 )

[node name="Eye" type="Sprite" parent="."]
texture = ExtResource( 14 )

[node name="Wing" type="Sprite" parent="."]
use_parent_material = true
texture = ExtResource( 8 )

[node name="Tween" type="Tween" parent="Wing"]

[node name="FlyingAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -11.106
pitch_scale = 4.0
script = ExtResource( 5 )

[node name="Tween" type="Tween" parent="FlyingAudio"]

[node name="ScoreAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -17.165

[node name="DeathAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -4.0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
scale = Vector2( 3, 3 )
polygon = PoolVector2Array( 29.343, -4.70785, 39.4512, 1.13908, 29.4421, 6.58961 )
disabled = true

[node name="Tween" type="Tween" parent="."]

[connection signal="area_shape_entered" from="." to="." method="_on_Bird_area_shape_entered"]
